// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TopicResourceDetails /> page should render correctly 1`] = `
<div
  data-testid="TopicResourceDetailsPage"
>
  <BreadcrumbLayout
    breadcrumbs={
      Array [
        Object {
          "title": "Topics",
          "to": "/topics",
        },
        Object {
          "title": undefined,
          "to": "/topics/topic-slug",
        },
        Object {
          "title": undefined,
          "to": "/topics/topic-slug/resources/resource-slug",
        },
      ]
    }
  >
    <NextSeo
      openGraph={
        Object {
          "description": "Learn about undefined and See how effective undefined is for learning undefined.",
          "title": "undefined - Resource Rank",
        }
      }
    />
    <div
      className="sm:flex justify-between items-center"
    >
      <div>
        <div
          className="flex items-center"
        >
          <div
            className="text-4xl"
            data-testid="ResourceTitle"
          />
        </div>
        <div
          className="mt-2 text-xs text-gray-800 font-thin"
        >
          Created by 
          Unknown
        </div>
      </div>
      <div
        className="mt-3 sm:mt-0"
      >
        <RatingStarGroup
          maxRating={5}
          rating={NaN}
          starSize={25}
        />
      </div>
    </div>
    <div
      className="mt-16"
    >
      <div
        className="text-2xl"
      >
        Details
      </div>
      <hr
        className="mt-3"
      />
      <div
        className="mt-6"
      >
        <ResourceDetails />
      </div>
    </div>
    <div
      className="mt-16"
    >
      <div
        className="text-2xl"
      >
        Add Rating
      </div>
      <hr
        className="mt-3"
      />
      <div
        className="mt-6"
      >
        <div>
          You must login to add a rating.
        </div>
      </div>
    </div>
  </BreadcrumbLayout>
</div>
`;

exports[`<TopicResourceDetails /> page should render correctly when logged in 1`] = `
<div
  data-testid="TopicResourceDetailsPage"
>
  <BreadcrumbLayout
    breadcrumbs={
      Array [
        Object {
          "title": "Topics",
          "to": "/topics",
        },
        Object {
          "title": undefined,
          "to": "/topics/topic-slug",
        },
        Object {
          "title": undefined,
          "to": "/topics/topic-slug/resources/resource-slug",
        },
      ]
    }
  >
    <NextSeo
      openGraph={
        Object {
          "description": "Learn about undefined and See how effective undefined is for learning undefined.",
          "title": "undefined - Resource Rank",
        }
      }
    />
    <div
      className="sm:flex justify-between items-center"
    >
      <div>
        <div
          className="flex items-center"
        >
          <div
            className="text-4xl"
            data-testid="ResourceTitle"
          />
        </div>
        <div
          className="mt-2 text-xs text-gray-800 font-thin"
        >
          Created by 
          Unknown
        </div>
      </div>
      <div
        className="mt-3 sm:mt-0"
      >
        <RatingStarGroup
          maxRating={5}
          rating={NaN}
          starSize={25}
        />
      </div>
    </div>
    <div
      className="mt-16"
    >
      <div
        className="text-2xl"
      >
        Details
      </div>
      <hr
        className="mt-3"
      />
      <div
        className="mt-6"
      >
        <ResourceDetails />
      </div>
    </div>
    <div
      className="mt-16"
    >
      <div
        className="text-2xl"
      >
        Add Rating
      </div>
      <hr
        className="mt-3"
      />
      <div
        className="mt-6"
      >
        <LoadingErrorEmptyDataLayout
          dataDisplay={
            <Unknown
              error={null}
              isSubmittingRating={false}
              onSubmit={[Function]}
            />
          }
          errorDisplay={
            <div
              className="error-text"
            >
              Failed to load your rating for this topic resource.
            </div>
          }
          hasData={true}
          hasError={false}
          isLoading={false}
          loadingDisplay={
            <div
              className="text-center"
            >
              <LoadingSpinner
                color="#292929"
                size={50}
              />
            </div>
          }
        />
      </div>
    </div>
  </BreadcrumbLayout>
</div>
`;

exports[`<TopicResourceDetails /> page should render correctly when verified 1`] = `
<div
  data-testid="TopicResourceDetailsPage"
>
  <BreadcrumbLayout
    breadcrumbs={
      Array [
        Object {
          "title": "Topics",
          "to": "/topics",
        },
        Object {
          "title": undefined,
          "to": "/topics/topic-slug",
        },
        Object {
          "title": undefined,
          "to": "/topics/topic-slug/resources/resource-slug",
        },
      ]
    }
  >
    <NextSeo
      openGraph={
        Object {
          "description": "Learn about undefined and See how effective undefined is for learning undefined.",
          "title": "undefined - Resource Rank",
        }
      }
    />
    <div
      className="sm:flex justify-between items-center"
    >
      <div>
        <div
          className="flex items-center"
        >
          <div
            className="text-4xl"
            data-testid="ResourceTitle"
          />
          <div
            className="ml-2"
          >
            <VerifiedIcon
              size={25}
            />
          </div>
        </div>
        <div
          className="mt-2 text-xs text-gray-800 font-thin"
        >
          Created by 
          Unknown
        </div>
      </div>
      <div
        className="mt-3 sm:mt-0"
      >
        <RatingStarGroup
          maxRating={5}
          rating={NaN}
          starSize={25}
        />
      </div>
    </div>
    <div
      className="mt-16"
    >
      <div
        className="text-2xl"
      >
        Details
      </div>
      <hr
        className="mt-3"
      />
      <div
        className="mt-6"
      >
        <ResourceDetails />
      </div>
    </div>
    <div
      className="mt-16"
    >
      <div
        className="text-2xl"
      >
        Add Rating
      </div>
      <hr
        className="mt-3"
      />
      <div
        className="mt-6"
      >
        <div>
          You must login to add a rating.
        </div>
      </div>
    </div>
  </BreadcrumbLayout>
</div>
`;

exports[`<TopicResourceDetails /> page should render correctly with existing rating 1`] = `
<div
  data-testid="TopicResourceDetailsPage"
>
  <BreadcrumbLayout
    breadcrumbs={
      Array [
        Object {
          "title": "Topics",
          "to": "/topics",
        },
        Object {
          "title": undefined,
          "to": "/topics/topic-slug",
        },
        Object {
          "title": undefined,
          "to": "/topics/topic-slug/resources/resource-slug",
        },
      ]
    }
  >
    <NextSeo
      openGraph={
        Object {
          "description": "Learn about undefined and See how effective undefined is for learning undefined.",
          "title": "undefined - Resource Rank",
        }
      }
    />
    <div
      className="sm:flex justify-between items-center"
    >
      <div>
        <div
          className="flex items-center"
        >
          <div
            className="text-4xl"
            data-testid="ResourceTitle"
          />
        </div>
        <div
          className="mt-2 text-xs text-gray-800 font-thin"
        >
          Created by 
          Unknown
        </div>
      </div>
      <div
        className="mt-3 sm:mt-0"
      >
        <RatingStarGroup
          maxRating={5}
          rating={NaN}
          starSize={25}
        />
      </div>
    </div>
    <div
      className="mt-16"
    >
      <div
        className="text-2xl"
      >
        Details
      </div>
      <hr
        className="mt-3"
      />
      <div
        className="mt-6"
      >
        <ResourceDetails />
      </div>
    </div>
    <div
      className="mt-16"
    >
      <div
        className="text-2xl"
      >
        Update Rating
      </div>
      <hr
        className="mt-3"
      />
      <div
        className="mt-6"
      >
        <div>
          You must login to add a rating.
        </div>
      </div>
    </div>
  </BreadcrumbLayout>
</div>
`;
